--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       max-parallel: 4
       matrix:
@@ -28,3 +28,4 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+    
