--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Add remote origin
       if:  github.ref == 'refs/heads/main' && job.status == 'success'
       run: |
-        git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY_1}}@git.heroku.com/${{secrets.HEROKU_API_KEY_2}}.git
+        git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/${{secrets.HEROKU_APP_NAME}}.git
     - name: Deploy to Heroku
       run: |
         git push heroku main
