--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,5 +42,5 @@ jobs:
       - uses: AkhileshNS/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_app_name: eventsapi-v1
           heroku_email: "alvarobc2412@gmail.com"
