--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.2.13
+django-heroku
 django-cors-headers==3.11.0
 django-filter==21.1
 djangorestframework==3.13.1
