--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,16 +10,10 @@ on:
 jobs:
   build:
     runs-on: macos-latest
-    services:
-      postgres:
-        image: postgres:13.0-alpine
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: events4321api
-          POSTGRES_DB: events_api_db
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.9]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
